--- a/intro.html
+++ b/intro.html
@@ -75,6 +75,7 @@
 
     <script>
         function goToIndex() {
+            localStorage.setItem('visitedIntro', 'true');
             window.location.href = "index.html";
         }
     </script>
