--- a/intro.html
+++ b/intro.html
@@ -75,7 +75,7 @@
 
     <script>
         function goToIndex() {
-            localStorage.setItem('visitedIntro', 'true');
+            localStorage.setItem('visitedIntro', 'true'); // Mark as visited
             window.location.href = "index.html";
         }
     </script>
