--- a/about.html
+++ b/about.html
@@ -24,7 +24,18 @@
     <main class="content">
         <section id="about">
             <h2>About This Site</h2>
-            <p>This website explores the relationship between social media usage and mental health. It provides resources and personal stories to raise awareness about the psychological effects of social media.</p>
+            <p>
+            Social media has become an inseparable part of our daily lives, influencing how we connect, communicate, and share experiences. However, as its presence grows, so does the importance of understanding its effects on mental health. Our platform is dedicated to exploring the multifaceted relationship between social media and well-being.
+        </p>
+        <p>
+            In today's digital era, social media can be a double-edged sword. On one side, it allows for unparalleled global connectivity, enabling people to form communities, find support, and share their voices. On the other side, it can create feelings of isolation, anxiety, and depression, often due to unrealistic comparisons, cyberbullying, and overexposure to negative content. Recognizing this complexity, we aim to create awareness and foster a balanced approach to using digital platforms.
+        </p>
+        <p>
+            Our mission is to empower individuals with the tools and knowledge to navigate the digital world in a healthy and mindful way. Through sharing personal stories, providing resources, and encouraging meaningful dialogue, we hope to shed light on both the benefits and challenges of online spaces. By understanding the nuances of social media's impact, we can work toward creating a more supportive and responsible digital environment for everyone.
+        </p>
+        <p>
+            Whether you're here to find relatable stories, access mental health resources, or learn how to foster healthier online habits, we're glad you've joined us. Together, we can take steps to ensure that social media remains a tool for connection and empowerment rather than a source of stress or harm.
+        </p>
         </section>
     </main>
     
