--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Social Media & Mental Health</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
@@ -9,27 +9,31 @@
 </head>
 <body>
     <header>
-        <h1>Social Media & Mental Health</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="stories.html">Personal Stories</a></li>
+                <li><a href="stories.html">Stories</a></li>
                 <li><a href="resources.html">Resources</a></li>
                 <li><a href="contact.html" class="current-page">Contact</a></li>
             </ul>
         </nav>
     </header>
-
     <main class="content">
         <section id="contact">
-            <h2>Contact Us</h2>
-            <p>If you have questions or want to share your story, please <a href="mailto:info@example.com">email us</a>.</p>
-        </section>
+        <h2>Contact Us</h2 >
+        <p>If you have any questions, suggestions, or want to share your story, feel free to <a href="mailto:info@example.com">email</a> us. We'd love to hear from you!</p>
+        
+        <h2>Donate</h2>
+        <p>
+            Your contributions help us maintain and expand this platform to support mental health awareness and education. If you'd like to donate, you can send your support via Zelle using the information below:
+        </p>
+        <p><strong>Zelle Phone Number:</strong> 206-766-0985</p>
+        <p>Thank you for your generosity and support in helping us continue this mission!</p>
     </main>
-    
     <footer>
         <p>&copy; 2024 Social Media & Mental Health</p>
     </footer>
 </body>
 </html>
+
