--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <h1>Social Media & Mental Health</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="intro.html">Home</a></li>
                 <li><a href="about.html" class="current-page">About</a></li>
                 <li><a href="stories.html">Personal Stories</a></li>
                 <li><a href="resources.html">Resources</a></li>
