--- a/index.html
+++ b/index.html
@@ -3,69 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
-    <script>
-        
-        document.addEventListener("DOMContentLoaded", () => {
-            const visitedIntro = localStorage.getItem('visitedIntro');
-            if (!visitedIntro) {
-                
-                window.location.href = "intro.html";
-            }
-        });
-    </script>
+    <title>Welcome</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
 
- 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Social Media & Mental Health</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+        .iphone {
+            position: relative;
+            width: 300px;
+            height: 600px;
+            border-radius: 40px;
+            background-color: black;
+            border: 5px solid #333;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .iphone::before {
+            content: "";
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 60px;
+            height: 5px;
+            background-color: #666;
+            border-radius: 5px;
+        }
+
+        .iphone-screen {
+            width: 260px;
+            height: 540px;
+            background-color: black;
+            border-radius: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .app-icon {
+            width: 80px;
+            height: 80px;
+            background: url('https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png') no-repeat center/cover;
+            border-radius: 20px;
+            cursor: pointer;
+        }
+
+        .app-icon:hover {
+            transform: scale(1.1);
+            transition: transform 0.3s ease-in-out;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Social Media & Mental Health</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html" class="current-page">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="stories.html">Personal Stories</a></li>
-                <li><a href="resources.html">Resources</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="iphone">
+        <div class="iphone-screen">
+            <div class="app-icon" onclick="goToIndex()"></div>
+        </div>
+    </div>
 
-    <main class="content">
-        <section id="introduction">
-            <h2>The Complex Relationship Between Social Media and Mental Health</h2>
-            <p>Social media has a complex relationship with mental health, with both positive and negative impacts. Here are some key effects:</p>
-
-            <h3>Positive Impacts</h3>
-            <ol>
-                <li><strong>Social Connection:</strong> Social media allows individuals to connect with friends and family, which can provide emotional support and reduce feelings of loneliness.</li>
-                <li><strong>Community Building:</strong> Online platforms can help people find communities with shared interests or experiences, such as support groups for mental health issues, which can foster a sense of belonging.</li>
-                <li><strong>Access to Information:</strong> Social media can serve as a source of information about mental health resources, coping strategies, and educational materials, increasing awareness and understanding.</li>
-                <li><strong>Self-Expression:</strong> Platforms provide a space for individuals to express themselves creatively and share their stories, which can be therapeutic and empowering.</li>
-            </ol>
-
-            <h3>Negative Impacts</h3>
-            <ol>
-                <li><strong>Anxiety and Depression:</strong> Excessive use of social media can contribute to feelings of anxiety and depression, often due to comparison with others, cyberbullying, or negative interactions.</li>
-                <li><strong>Fear of Missing Out (FOMO):</strong> Seeing others' curated lives can lead to FOMO, increasing feelings of inadequacy and dissatisfaction with one’s own life.</li>
-                <li><strong>Sleep Disruption:</strong> Late-night use of social media can interfere with sleep patterns, leading to fatigue and exacerbating mental health issues.</li>
-                <li><strong>Addiction and Dependency:</strong> The addictive nature of social media can lead to excessive screen time, reducing face-to-face interactions and physical activities, which are important for mental well-being.</li>
-                <li><strong>Distorted Self-Image:</strong> Exposure to unrealistic body standards and lifestyles can negatively impact self-esteem and body image, particularly among young people.</li>
-            </ol>
-
-            <h3>Conclusion</h3>
-            <p>While social media can offer support and connection, it's essential for users to be mindful of their usage and its potential effects on mental health. Balancing online interactions with real-life connections and practicing digital wellness can help mitigate negative impacts.</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Social Media & Mental Health</p>
-    </footer>
+    <script>
+        function goToIndex() {
+            window.location.href = "intro.html";
+        }
+    </script>
 </body>
 </html>
